--- a/src/components/WorkProjects.css
+++ b/src/components/WorkProjects.css
@@ -1,3 +1,7 @@
+.work-header {
+    padding: 1rem;
+}
+
 .work-project img {
-    max-width: 600px;
+    max-width: 100%;
 }
